fix mobile align issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1333,11 +1333,14 @@ input, select, textarea {
 			flex-direction: column;
 			align-items: center;
 		}
+		.timeline.edu, .timeline.exp{
+			margin: 0 1rem;
+		}
 		.workexperience{
 			margin-top: 2.5rem;
 		}
 		.workexperience, .education{
-			max-width: 80%;
+			padding: 0;
 
 		}
 
